--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphiql": "^3.2.0",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.1",
+    "graphql-playground-middleware-express": "^1.7.23",
     "mongoose": "^8.3.3",
     "nanoid": "^5.0.7",
     "ruru": "^2.0.0-beta.11"
